# review-automation-system

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  fix-and-start.bat  pyproject.toml  start.bat  stop-review-ops.bat
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_review_fields_and_tables.py  002_review_ops_phase1.py  003_admin_bulk_actions.py  004_web_source_urls_only.py  005_p0_perf_indexes.py  006_shared_auth_sessions.py  007_backfill_legacy_shared_session_scope.py  008_auto_reply_foundation.py  009_merge_bakudan_into_single_store.py  010_review_audit_and_filter_support.py  (+1 more)
app/: config.py  database.py  main.py  redis.py
docs/: build-verification-report.md  current-qa-readiness.md  master-control-center-integration-roadmap.md  product-improvement-blueprint-v4.md  provider-reliability-report.md  qa-execution-report-template.md  qa-test-plan.md  review-ops-architecture-plan.md  safe-production-rollout-checklist.md  scheduler-duplication-check.md  uat-owner-summary.md  uat-plan.md  uat-scorecard-template.md
scripts/: backfill_auto_reply_signals.py  backfill_review_audit.py  bootstrap_source_session.ps1  bootstrap_source_session.py  fix_and_start.ps1  repair_review_encoding.py  run_worker.py  seed_locations.py  seed_settings.py  send_daily_negative_report.py  start_review_ops.ps1  stop_review_ops.ps1
tests/: conftest.py  test_ai_analysis.py  test_auto_reply_policy.py  test_health_api.py  test_location_seed.py  test_review_matcher.py  test_reviews_api.py  test_rule_engine.py  test_session_resolution.py  test_stats_api.py
(+57 files in other folders)
